Fix the code blocks missing background color

--- a/_precompiled/scss/_pygments.scss
+++ b/_precompiled/scss/_pygments.scss
@@ -1,3 +1,4 @@
+.highlight { background-color: #49483e }
 .hll { background-color: #49483e }
 .c { color: #75715e } /* Comment */
 .err { color: #960050; background-color: #1e0010 } /* Error */
